# CapstoneSpiderRobot

./: Camera_Functions.py  README.md  SETUP.md  SpinActions.py  yaml_list.py
Development/Camera/: .Camera_Functions.py.swp  .Camera_Test.py.swp  Camera_Functions.py  Camera_Test.py  Con_test.py  Gradient.py  Notes.txt  heading_angle.py  lines.txt
Development/Camera/test/: Camera_Test.py  Gradient.py  HSV_Value.py  Take_Image.py
Development/Ultrasonic/: .Ultrasonic.py.swp  Ultrasonic_functions.py
hardware_interface/include/: servo2040_hardware.hpp
kdl_py_bridge/: CMakeLists.txt  package.xml
kdl_py_bridge/src/: kdl_wrapper.cpp
serial/: README.md  controller_notes.txt  usb_testing.py
serial/MicroPython/: LED_RAINBOW_code.py  get_current.py  main.py  main_v1.py
spider_capstone/: CMakeLists.txt  package.xml  setup.cfg  setup.py
spider_capstone/launch/: view_spider.launch.py
spider_capstone/meshes/: MockBase.stl  ServoSeat2.stl
spider_capstone/rviz/: STL_small.rviz  markers.rviz
spider_capstone/urdf/: 01-2-joints.urdf  01-STL.urdf.xacro  02-stl-move.urdf  03-stl-move-macro.urdf
spider_capstone_bringup/: CMakeLists.txt  package.xml
spider_capstone_bringup/config/: spider_capstone_controllers.yaml
spider_capstone_bringup/launch/: laptop.launch.py  pi.launch.py  spider_capstone.launch.py  spider_capstone_launch.xml
spider_capstone_bringup/python/: gui_launcher.py
spider_capstone_description/: package.xml  setup.cfg  setup.py
spider_capstone_description/launch/: view_spider.launch.py
spider_capstone_description/meshes/Prototype/: Link1.stl  Link2.stl  Link3.stl  ServoSeat.stl  ServoSeat3.stl
spider_capstone_description/meshes/V1/: BaseUpperPlate.stl  EndEffector.stl  Link1Lower.stl  Link1Upper.stl  Link2Left.stl  Link2Right.stl  Link3Left.stl  Link3Right.stl  MG996RSeat.stl
spider_capstone_description/meshes/V2/: BaseLowerPlate.stl  Link 1.stl  Link 2.stl  Link 3.stl  MG90S Body_1_solid1.stl  MG90S Body_1_solid1_1.stl  MG90S Top_1_solid2.stl  MG90S Top_1_solid2_1.stl  MG995R.stl  MG995R_axel.stl  MG996R_Seat.stl  MG996R_seat_pin.stl  claw tip.stl  small servo seat.stl
spider_capstone_description/ros2_control/: 04-final.ros2_control.xacro  spider.ros2_control.xacro
spider_capstone_description/rviz/: STL_path_marker.rviz  spider.rviz  urdf.rviz
spider_capstone_description/urdf/: 01-STL.urdf.xacro  02-stl-move.urdf  03-stl-move-macro.urdf  Project1.urdf.xacro  leg_v2.urdf.xacro  spider.urdf.xacro  spider_v2.urdf.xacro
spider_capstone_hardware/: CMakeLists.txt  package.xml  plugin.xml
spider_capstone_hardware/include/spider_capstone_hardware/: spider_hardware_interface.hpp
spider_capstone_hardware/src/: spider_hardware_interface.cpp
spider_capstone_hardware/test/: test_load_spider_capstone_hardware.cpp
spider_capstone_msgs/: CMakeLists.txt  package.xml
spider_capstone_msgs/msg/: Control.msg  Imu9Dof.msg
spider_capstone_sensors/: package.xml  setup.cfg  setup.py
spider_capstone_sensors/spider_capstone_sensors/: Camera_Functions.py  PowerLogger Backup.py  PowerLogger.py  README.md  Ultrasonic_functions.py  Ultrasonic_pub.py  auto_controller.py  camera_pub.py  icm_pub.py  joy_controller.py
spider_capstone_sensors/spider_capstone_sensors/tests/: camera_test.py  icm_test.py
spider_capstone_trajectory/: package.xml  setup.cfg  setup.py
spider_capstone_trajectory/spider_capstone_trajectory/: ActionSteppy backup.py  ActionSteppy preSpinBackup.py  ActionSteppy.py  BigSteppy.py  GoSteppy.py  IKSingleLeg.py  Inverse_Kinematics.py  Rotations.py  joint_trajectory.py  test_jsp.py
spider_capstone_visualize/: package.xml  setup.cfg  setup.py
spider_capstone_visualize/spider_capstone_visualize/: colors.py  joint_trajectory_plot.py
spider_viz/: package.xml  setup.cfg  setup.py
spider_viz/spider_viz/: convex_hull.py  leg_3_joint_node.py  leg_workspace_node.py
