<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spider_capstone</name>
  <version>0.0.0</version>
  <description>Metapackage for spider_capstone related packages</description>
  <maintainer email="gminton07@gmail.com">gabe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>spider_capstone_bringup</exec_depend>
  <exec_depend>spider_capstone_description</exec_depend>
  <exec_depend>spider_capstone_hardware</exec_depend>
  <depend>spider_capstone_msgs</depend>
  <exec_depend>spider_capstone_sensors</exec_depend>
  <exec_depend>spider_capstone_trajectory</exec_depend>
  <exec_depend>spider_capstone_visualize</exec_depend>

  <build_depend>kdl_py_bridge</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
