<?xml version="1.0"?>
<package format="3">
  <name>spider_capstone_hardware</name>
  <version>0.0.0</version>
  <description>Hardware interface for spider capstone quadruped</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gmock</test_depend>

  <!-- 🔥 THIS IS THE MOST IMPORTANT LINE -->
  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>